--- a/blocks/element/__text/element__text.css
+++ b/blocks/element/__text/element__text.css
@@ -1,5 +1,5 @@
 .element__text{
-  font-family: Inter;
+  font-family: 'Inter', ‘Arial’, sans-serif;
   font-style: normal;
   font-weight: 900;
   font-size: 24px;
@@ -7,6 +7,6 @@
   margin-left:21px;
 
   text-overflow: ellipsis;
-    white-space: nowrap;
-    overflow: hidden;
+  white-space: nowrap;
+  overflow: hidden;
 }
