--- a/blocks/footer/__text/footer__text.css
+++ b/blocks/footer/__text/footer__text.css
@@ -1,7 +1,14 @@
 .footer__text{
-  font-family: Inter;
+  font-family: 'Inter', ‘Arial’, sans-serif;
   font-style: normal;
   font-weight: normal;
   font-size: 18px;
   line-height: 22px;
+}
+
+@media screen and (max-width: 882px) {
+  .footer__text {
+    font-size: 14px;
+    line-height: 17px;
+  }
 }
