--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -3,5 +3,6 @@
     max-width: 882px;
     margin: 0 auto;
     margin-bottom:40px;
-    border-bottom: 1px solid #545454;
+    padding-bottom: 40.6px;
+    border-bottom: 1px solid rgba(54,54,54,0.7);
 }
