--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -1,11 +1,14 @@
 .popup__close{
     width:100%;
     max-width: 40.7px;
+    height: 40.7px;
     position: absolute;
     left: calc(50% + 215px);
     top: calc(50% - 165px - 20.3px);
     margin:0;
-    background: 0;
+    /* padding: 0; */
+    background: url('../../../images/CloseIcon.png') no-repeat;
+    background-size: contain;
     border:none;
     transition: 3s;
 }
@@ -13,3 +16,9 @@
 .popup__close:hover{
     opacity: 80%;
 }
+
+@media screen and (max-width: 882px) {
+    .popup__close{
+      left:calc(50% + 141px);
+    }
+  }
