--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,11 +1,10 @@
 .popup{
-    position: absolute;
+    position: fixed;
     left:0;
     top:0;
     width:100%;
     height:100%;
-    opacity: 50%;
-    background-color: black;
+    background-color: rgba(0, 0, 0, 0.5);;
     z-index: 1;
     display:none;
 }
