--- a/blocks/profile/__logo/profile__logo.css
+++ b/blocks/profile/__logo/profile__logo.css
@@ -1,6 +1,12 @@
 .profile__logo{
-    max-width: 120px;
-    max-height: 120px;
-    margin-right: 30px;
-    align-self:center;
+  max-width: 120px;
+  max-height: 120px;
+  margin-right: 30px;
+  align-self:center;
+}
+
+@media screen and (max-width: 882px) {
+  .profile__logo {
+    margin:0 auto;
+  }
 }
