--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -10,6 +10,7 @@
   max-width: 330px;
   text-align: center;
   margin-top:34px;
+  margin-bottom: 54px;
 }
 
 @media screen and (max-width: 882px) {
