--- a/blocks/profile/__button/profile__button.css
+++ b/blocks/profile/__button/profile__button.css
@@ -3,8 +3,8 @@
   width: 24px;
   height:24px;
   /* margin: 0;
-  padding: 0;
-  border:none;*/
+  padding: 0;*/
+  border:none;
   transition: 3s; 
   background: url('../../../images/EditButton.png') no-repeat;
   background-position: center;
