--- a/blocks/popup/__button/popup__button.css
+++ b/blocks/popup/__button/popup__button.css
@@ -9,6 +9,7 @@
   text-align: center;
 
   margin: 0 auto;
+  padding:0;
   max-width:358px;
   transition: 3s;
 
@@ -16,11 +17,15 @@
   width:100%;
   max-width:358px;
   margin-top: 18.26px;
+  height:50.15px;
+  border:none;
+  border-radius:2px;
 }
 
 @media screen and (max-width: 882px) {
   .popup__button{
     max-width: 238px;
+    height: 46px;
   }
 }
 
