--- a/blocks/popup/__close/popup__close.css
+++ b/blocks/popup/__close/popup__close.css
@@ -6,7 +6,7 @@
     left: calc(50% + 215px);
     top: calc(50% - 165px - 20.3px);
     margin:0;
-    /* padding: 0; */
+    padding: 0;
     background: url('../../../images/CloseIcon.png') no-repeat;
     background-size: contain;
     border:none;
@@ -19,6 +19,7 @@
 
 @media screen and (max-width: 882px) {
     .popup__close{
-      left:calc(50% + 141px);
+      left:calc(50% + 141px - 36.375px);
+      top: calc(50% - 165px - 33.92px);
     }
   }
