--- a/blocks/element/__img/element__img.css
+++ b/blocks/element/__img/element__img.css
@@ -1,5 +1,8 @@
 .element__img{
-    max-width:100%;
+    width:100%;
+    height:100%;
+    max-height:282px;
     padding:0;
     margin:0;
+    z-index: 1;
 }
