--- a/blocks/element/element.css
+++ b/blocks/element/element.css
@@ -3,4 +3,8 @@
     max-width: 282px;
     border-radius: 10px;
     overflow: hidden;
+    height:351px; 
+    position: relative;
+    padding:0;
+    margin:0;
 }
