--- a/blocks/image-popup/image-popup.css
+++ b/blocks/image-popup/image-popup.css
@@ -1,12 +1,13 @@
-.popup{
+.image-popup{
   position: fixed;
   left:0;
   top:0;
   width:100%;
   height:100%;
-  background-color: rgba(0, 0, 0, 0.5);;
-  z-index: 3;
+  background-color: rgba(0, 0, 0, 0.5);
+    
   display:flex;
+  z-index: 3;
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s, opacity 0.5s linear;
