--- a/blocks/place-popup/place-popup.css
+++ b/blocks/place-popup/place-popup.css
@@ -1,12 +1,12 @@
-.popup{
+.place-popup{
   position: fixed;
+  display: flex;
   left:0;
   top:0;
   width:100%;
   height:100%;
   background-color: rgba(0, 0, 0, 0.5);;
   z-index: 3;
-  display:flex;
   visibility: hidden;
   opacity: 0;
   transition: visibility 0s, opacity 0.5s linear;
