--- a/blocks/profile-popup/__input/profile-popup__input.css
+++ b/blocks/profile-popup/__input/profile-popup__input.css
@@ -1,4 +1,4 @@
-.popup__input{
+.profile-popup__input{
   margin: 0 auto;
     
   margin-bottom: 29.74px;
@@ -11,7 +11,7 @@
 }
 
 @media screen and (max-width: 882px) {
-  .popup__input {
+  .profile-popup__input {
     max-width:238px;
   }
 }
