--- a/blocks/profile-popup/__container/profile-popup__container.css
+++ b/blocks/profile-popup/__container/profile-popup__container.css
@@ -1,4 +1,4 @@
-.popup__container{
+.profile-popup__container{
   width: 100%;
   max-width: 430px;
   background-color: white;
@@ -14,7 +14,7 @@
 }
 
 @media screen and (max-width: 882px) {
-  .popup__container{
+  .profile-popup__container{
     max-width: 282px;
     left:calc(50% - 141px);
     top:calc(50% - 161px);
