--- a/blocks/profile-popup/profile-popup.css
+++ b/blocks/profile-popup/profile-popup.css
@@ -1,10 +1,10 @@
-.place-popup{
+.profile-popup{
   position: fixed;
-  display: flex;
   left:0;
   top:0;
   width:100%;
   height:100%;
   background-color: rgba(0, 0, 0, 0.5);;
   z-index: 3;
+  display:flex;
 }
