--- a/blocks/popup/__title/popup__title.css
+++ b/blocks/popup/__title/popup__title.css
@@ -1,4 +1,4 @@
-.profile-popup__title{
+.popup__title{
   margin:0;
   padding:0;
   font-family: 'Inter', ‘Arial’, sans-serif;
@@ -14,7 +14,7 @@
 }
 
 @media screen and (max-width: 882px) {
-  .profile-popup__title{
+  .popup__title{
     font-size: 18px;
     line-height: 22px;
     max-width: 238px;
