--- a/blocks/popup/__input/popup__input.css
+++ b/blocks/popup/__input/popup__input.css
@@ -1,7 +1,7 @@
 .popup__input{
   margin: 0 auto;
     
-  margin-bottom: 29.74px;
+  /* margin-bottom: 29.74px; */
   font-family: 'Inter', ‘Arial’, sans-serif;
   width: 100%;
   max-width: 358px;
@@ -15,3 +15,8 @@
     max-width:238px;
   }
 }
+
+.popup__input_type_error {
+  
+  border-bottom: 1px solid #FF0000;
+} 
