--- a/pages/index.css
+++ b/pages/index.css
@@ -33,7 +33,9 @@
 @import url('../blocks/popup/__container/popup__container.css');
 @import url('../blocks/popup/__title/popup__title.css');
 @import url('../blocks/popup/__input/popup__input.css');
+@import url('../blocks/popup/__input-error/popup__input-error.css');
 @import url('../blocks/popup/__button/popup__button.css');
+@import url('../blocks/popup/__button/_inactive/popup__button_inactive.css');
 @import url('../blocks/popup/__close/popup__close.css');
 
 @import url('../blocks/image-popup/image-popup.css');
