sixth sprint second cxommit

--- a/blocks/profile/__add-button/profile__add-button.css
+++ b/blocks/profile/__add-button/profile__add-button.css
@@ -8,6 +8,7 @@
   background-position: center;
   transition:3s;
   border: 1px solid #FFFFFF;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 882px) {
