--- a/blocks/element/__delete/element__delete.css
+++ b/blocks/element/__delete/element__delete.css
@@ -6,6 +6,8 @@
   border: none;
   background: url("../../../images/Trash.png") no-repeat;
   background-size: contain;
+  cursor: pointer;
+  
 
   z-index:2;
   height: 19.3px;
