--- a/src/blocks/image-popup/__close/image-popup__close.css
+++ b/src/blocks/image-popup/__close/image-popup__close.css
@@ -4,8 +4,10 @@
     max-width: 40.7px;
     height: 40.7px;
     position: absolute;
-    right:-40.7px;
-    top: -40.7px;;
+    
+    
+    top: -41px;
+    right: -41px;
     margin:0;
     padding: 0;
     background: url('../../../images/CloseIcon.png') no-repeat;
