--- a/src/blocks/profile/__logo/profile__logo.css
+++ b/src/blocks/profile/__logo/profile__logo.css
@@ -1,8 +1,17 @@
 .profile__logo{
-  max-width: 120px;
-  max-height: 120px;
+  height: 100%;
+  width:auto;
+  background-size: cover;
+  max-width: 127px;
+  max-height: 127px;
   margin-right: 30px;
   align-self:center;
+  border-radius: 50%;
+  grid-column: 1;
+  grid-row: 1;
+  z-index: 2;
+  align-self: center;
+  justify-self: center;
 }
 
 @media screen and (max-width: 882px) {
