--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -7,7 +7,10 @@
 @import url('../blocks/header/__logo/header__logo.css');
 
 @import url('../blocks/profile/profile.css');
+@import url('../blocks/profile/__art/profile__art.css');
 @import url('../blocks/profile/__logo/profile__logo.css');
+@import url('../blocks/profile/__pen/profile__pen.css');
+@import url('../blocks/profile/__overlay/profile__overlay.css');
 @import url('../blocks/profile/__add-button/profile__add-button.css');
 
 @import url('../blocks/profile/__info/profile__info.css');
@@ -23,6 +26,8 @@
 @import url('../blocks/element/__button/element__button.css');
 @import url('../blocks/element/__delete/element__delete.css');
 @import url('../blocks/element/__button/_liked/element__button_liked.css');
+@import url('../blocks/element/__section/element__section.css');
+@import url('../blocks/element/__likeCount/element__likeCount.css');
 
 @import url('../blocks/footer/footer.css');
 @import url('../blocks/footer/__text/footer__text.css');
