--- a/src/blocks/profile/__logo/profile__logo.css
+++ b/src/blocks/profile/__logo/profile__logo.css
@@ -1,7 +1,8 @@
 .profile__logo{
   height: 100%;
-  width:auto;
+  /* width:auto; */
   background-size: cover;
+  width:100%;
   max-width: 127px;
   max-height: 127px;
   margin-right: 30px;
